{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "d56d4653-5d59-7ab5-5b8e-2a74b9414810",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inno_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:internet-gateway/igw-0e2ad7408a06a171e",
            "id": "igw-0e2ad7408a06a171e",
            "owner_id": "878582761299",
            "region": "us-east-1",
            "tags": {
              "Name": "inno-igw"
            },
            "tags_all": {
              "Name": "inno-igw"
            },
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inno_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:route-table/rtb-0059891889bebd6e2",
            "id": "rtb-0059891889bebd6e2",
            "owner_id": "878582761299",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e2ad7408a06a171e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inno-route-table"
            },
            "tags_all": {
              "Name": "inno-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.inno_igw",
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f23261b9e586754",
            "region": "us-east-1",
            "route_table_id": "rtb-0059891889bebd6e2",
            "subnet_id": "subnet-075ea4874d81eb57f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.inno_igw",
            "aws_route_table.inno_route_table",
            "aws_subnet.inno_subnet",
            "aws_vpc.inno_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2525cf707b02e55",
            "region": "us-east-1",
            "route_table_id": "rtb-0059891889bebd6e2",
            "subnet_id": "subnet-03c2f7979e98158bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.inno_igw",
            "aws_route_table.inno_route_table",
            "aws_subnet.inno_subnet",
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inno_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:security-group/sg-02ed99cf97400e774",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ed99cf97400e774",
            "ingress": [],
            "name": "terraform-20250730201555330300000001",
            "name_prefix": "terraform-",
            "owner_id": "878582761299",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inno-cluster-sg"
            },
            "tags_all": {
              "Name": "inno-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inno_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:security-group/sg-09e040820b30ceca4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e040820b30ceca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250730201555356000000002",
            "name_prefix": "terraform-",
            "owner_id": "878582761299",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inno-node-sg"
            },
            "tags_all": {
              "Name": "inno-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inno_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:subnet/subnet-075ea4874d81eb57f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075ea4874d81eb57f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878582761299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "inno-subnet-0"
            },
            "tags_all": {
              "Name": "inno-subnet-0"
            },
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inno_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:subnet/subnet-03c2f7979e98158bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2f7979e98158bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878582761299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "inno-subnet-1"
            },
            "tags_all": {
              "Name": "inno-subnet-1"
            },
            "vpc_id": "vpc-010eb1f112a19c4db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.inno_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "inno_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878582761299:vpc/vpc-010eb1f112a19c4db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cae8b7b04f66f8d7",
            "default_route_table_id": "rtb-0af6b442020416cdc",
            "default_security_group_id": "sg-0250f5a5dec693e87",
            "dhcp_options_id": "dopt-0b23f203d1280db5d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-010eb1f112a19c4db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af6b442020416cdc",
            "owner_id": "878582761299",
            "region": "us-east-1",
            "tags": {
              "Name": "inno-vpc"
            },
            "tags_all": {
              "Name": "inno-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}